Updated release notes

--- a/src/DotNet.SourceMaps/project.json
+++ b/src/DotNet.SourceMaps/project.json
@@ -23,7 +23,7 @@
       "sourcemaps",
       "source maps"
     ],
-    "releaseNotes": "Initial Release."
+    "releaseNotes": "Added ability to create non-name mappings."
   },
   "dependencies": {
     "NETStandard.Library": "1.6.0"
