--- a/src/DotNet.SourceMaps.Tests/DotNet.SourceMaps.Tests.csproj
+++ b/src/DotNet.SourceMaps.Tests/DotNet.SourceMaps.Tests.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0-preview-20170106-08" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0-beta5-build1225" />
     <PackageReference Include="xunit" Version="2.2.0-beta5-build3474" />
     <PackageReference Include="Moq" Version="4.2.1510.2205" />
